# SAPladdin

./: .gitignore  README.en.md  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
config/: gcloud_config.yaml.example  hana_config.yaml.example  hosts.yaml.example  joplin_config.yaml.example  security_config.yaml  ssh_gcp.config
core/: __init__.py  hosts.py  server.py
core/tools/: __init__.py  filesystem.py  gcloud.py  hana.py  hosts_mgmt.py  joplin.py  mssql.py  oracle.py  process.py  process_sessions.py  sap_basis.py  session_manager.py  ssh.py  terminal.py  utils.py
docs/: CLIENT_SETUP.md  CONTEXT.md  SAPladdin_MCP_Informe_A4H_20260330.md
scripts/: _git_setup.bat  _install.bat  smoke_test.py
tests/: test_filesystem_and_hosts.py  test_gcloud.py  test_joplin.py  test_sap_basis.py  test_ssh_script.py
